--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,22 +1,12 @@
 # main links links
 main:
-  - title: "Publications"
-    url: /publications/
-
-  - title: "Talks"
-    url: /talks/    
-
-  - title: "Teaching"
-    url: /teaching/    
-    
-  - title: "Portfolio"
-    url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
-    
   - title: "CV"
     url: /cv/
+    url:/files/academic cv for CSS.pdf
     
-  - title: "Guide"
-    url: /markdown/
+  - title: "Publications"
+    url: /publications/
+ 
+  - title: "Portfolio"
+    url: /portfolio/
+         
