--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,7 +2,7 @@
 main:
   - title: "CV"
     url: /cv/
-    url: /files/CV2(digital_activism_polarization_identity_interaction).pdf
+    url: /files/CV202505(1).pdf
     
   - title: "Publications"
     url: /publications/
